doc/install/etc/iptables/rules-log2fw.v4
# Generated by iptables-save v1.8.7 on Tue Sep 19 19:09:01 2023
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [O:O]
:Apache - [0:0]
:AuthSmtp - [0:0]
:AuthSsh - [0:0]
:Friends - [0:0]
-A INPUT -p tcp -m state --state NEW -m tcp -j Friends
-A INPUT -p tcp -m tcp --dport 22 -j AuthSsh
-A INPUT -p tcp -m tcp --dport 25 -j AuthSmtp
-A INPUT -p tcp -m tcp --dport 587 -j AuthSmtp
-A INPUT -p tcp -m tcp --dport 80 -j Apache
-A INPUT -p tcp -m tcp --dport 443 -j Apache
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 143 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 993 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 995 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 873 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 53 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A Friends -s 10.0.0.0/8 -p tcp -j ACCEPT
-A Friends -s 192.168.0.0/16 -p tcp -j ACCEPT
COMMIT
# Completed on Tue Sep 19 19:09:01 2023
